2009-01-19  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Main/SOGo.m
	We check if we have an empty configuration upon startup
	and warn the user about this.

2009-01-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSString+Utilities.m ([NSString
	-asCSSIdentifier]): new method returning a "safe" CSS identifier
	based on the original string.

2009-01-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -userDefaults]): make use
	of more explicit names for the variables used. Invoke a new [self
	primaryUserDefaults] that fetches the defaults from the database,
	so as to separate that mechanism from the caching mechanisme.
	([SOGoUser -userSettings]): same as above.

2009-01-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-aclUsers]): fixed method to invoke [container
	aclUsersForObjectAtPath:] with the resulting path as argument
	instead of the path itself.

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	-sendFolderAdvisoryTemplate:template]): the condition check for
	sending folder advisories has been moved here.
	([SOGoGCSFolder -sendFolderAdvisoryTemplate:template]): now a
	public method.

2009-01-07  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added Documentation/SOGo Mobile Devices Configuration.odt
	* Fixed typos in the Intallation & Configuration guide
	* Added Documentation/SOGo Mozilla Thunderbird Configuration.odt

2009-01-07  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-_handleCustomRRule:]): set the proper timezone for the end date.
	([UIxComponentEditor -_loadRRules]): idem.
	([UIxComponentEditor -init): instanciates an UIxDatePicker object
	to retrieve the proper date format.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-saveAction]): for recurrent events with an end date, the method
	_adjustRecurrentRules must be called unconditionally. This fixes